TASK 2904 (Status_flow_for_gote_details_UI_Design)
note:-Refresh Logic for the fragment
- Change the design in ActionDetailsAdapter.kt
as per the new wireFrame
- Change the Previous design to adapte all the Resolutions
- Implement the logic to refresh the DashBoardFragment.kt
- Implement the logic to refresh the ScheduleManagementActivity.kt
-Created the Two dialog for Start service Flow and Intitate Closer
- Call the QuoteDetailsDialog.kt in BidSubmitted and Won Bid and New Request
-In Signin change the Dimension to adapte all the resolution
- Added the icon for Quote Status view

--- a/app/src/main/res/layout/activity_schedule_managment.xml
+++ b/app/src/main/res/layout/activity_schedule_managment.xml
@@ -9,70 +9,77 @@
             type="com.smf.events.ui.schedulemanagement.ScheduleManagementViewModel" />
     </data>
 
-    <androidx.core.widget.NestedScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".ui.schedulemanagement.ScheduleManagementActivity">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/refresh_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent">
+
+        <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent"
+            tools:context=".ui.schedulemanagement.ScheduleManagementActivity">
 
-            <FrameLayout
-                android:id="@+id/calendar_fragment"
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                android:layout_height="wrap_content">
+
+                <FrameLayout
+                    android:id="@+id/calendar_fragment"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
 
-            <TextView
-                android:id="@+id/switch_btn_tx"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/size_10dp"
-                android:layout_marginBottom="@dimen/size_10dp"
-                android:layout_marginEnd="@dimen/size_5dp"
-                android:fontFamily="@font/poppins_regular"
-                android:gravity="end"
-                android:text="@string/switch_to_modify_slots_availability"
-                android:textAlignment="textEnd"
-                android:textColor="@color/black"
-                android:textSize="@dimen/size_15sp"
-                app:layout_constraintBottom_toTopOf="@id/timeslots_fragment"
-                app:layout_constraintEnd_toStartOf="@+id/switch_btn"
-                app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/calendar_fragment" />
+                <TextView
+                    android:id="@+id/switch_btn_tx"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/size_10dp"
+                    android:layout_marginEnd="@dimen/size_5dp"
+                    android:layout_marginBottom="@dimen/size_10dp"
+                    android:fontFamily="@font/poppins_regular"
+                    android:gravity="end"
+                    android:text="@string/switch_to_modify_slots_availability"
+                    android:textAlignment="textEnd"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/size_15sp"
+                    app:layout_constraintBottom_toTopOf="@id/timeslots_fragment"
+                    app:layout_constraintEnd_toStartOf="@+id/switch_btn"
+                    app:layout_constraintHorizontal_bias="1.0"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/calendar_fragment" />
 
-            <ToggleButton
-                android:id="@+id/switch_btn"
-                android:foregroundGravity="center"
-                android:layout_width="@dimen/size_60dp"
-                android:layout_height="@dimen/size_35dp"
-                android:layout_marginTop="@dimen/size_20dp"
-                android:layout_marginEnd="@dimen/size_30dp"
-                android:layout_marginBottom="@dimen/size_20dp"
-                android:layout_weight="0.2"
-                android:background="@drawable/toggle_track"
-                android:gravity="center"
-                android:scaleX="1"
-                android:scaleY="1"
-                android:textOff=""
-                android:textOn=""
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/calendar_fragment" />
+                <ToggleButton
+                    android:id="@+id/switch_btn"
+                    android:layout_width="@dimen/size_60dp"
+                    android:layout_height="@dimen/size_35dp"
+                    android:layout_marginTop="@dimen/size_20dp"
+                    android:layout_marginEnd="@dimen/size_30dp"
+                    android:layout_marginBottom="@dimen/size_20dp"
+                    android:layout_weight="0.2"
+                    android:background="@drawable/toggle_track"
+                    android:foregroundGravity="center"
+                    android:gravity="center"
+                    android:scaleX="1"
+                    android:scaleY="1"
+                    android:textOff=""
+                    android:textOn=""
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/calendar_fragment" />
 
-            <FrameLayout
-                android:id="@+id/timeslots_fragment"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/size_25dp"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/switch_btn" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.core.widget.NestedScrollView>
+                <FrameLayout
+                    android:id="@+id/timeslots_fragment"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/size_25dp"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/switch_btn" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.core.widget.NestedScrollView>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 </layout>
