--- a/app/src/main/res/layout/event_details_card_view.xml
+++ b/app/src/main/res/layout/event_details_card_view.xml
@@ -9,15 +9,14 @@
     android:layout_marginStart="@dimen/size_5dp"
     android:layout_marginTop="@dimen/size_5dp"
     android:layout_marginEnd="@dimen/size_5dp"
-    android:layout_marginBottom="@dimen/size_15dp"
+    android:layout_marginBottom="@dimen/size_5dp"
     android:background="@drawable/event_detail_cardview_background"
     app:cardCornerRadius="@dimen/size_8dp"
     app:cardElevation="@dimen/size_8dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="@dimen/size_5dp">
+        android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/event_title_text"
@@ -308,7 +307,7 @@
             app:layout_constraintTop_toBottomOf="@+id/event_date">
 
             <LinearLayout
-                android:id="@id/right_arrow_imageView"
+                android:id="@id/quote_status"
                 android:layout_width="@dimen/size_150dp"
                 android:layout_height="@dimen/size_35dp"
                 android:layout_marginTop="@dimen/size_2dp"
@@ -323,7 +322,7 @@
                 app:layout_constraintTop_toTopOf="parent">
 
                 <TextView
-                    android:id="@+id/right_arrow_imageView"
+                    android:id="@+id/quote_status"
                     android:layout_width="@dimen/dp_0"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -351,24 +350,45 @@
                 android:layout_height="wrap_content"
                 android:padding="@dimen/size_8dp"
                 android:src="@drawable/reject_bid_circle"
-                app:layout_constraintBottom_toBottomOf="@+id/right_arrow_imageView"
+                app:layout_constraintBottom_toBottomOf="@+id/quote_status"
                 app:layout_constraintEnd_toStartOf="@+id/like_imageView"
                 app:layout_constraintHorizontal_bias="0.99"
-                app:layout_constraintStart_toEndOf="@+id/right_arrow_imageView"
-                app:layout_constraintTop_toTopOf="@+id/right_arrow_imageView" />
+                app:layout_constraintStart_toEndOf="@+id/quote_status"
+                app:layout_constraintTop_toTopOf="@+id/quote_status" />
 
             <ImageView
                 android:id="@+id/like_imageView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/size_5dp"
-                app:layout_constraintBottom_toBottomOf="@+id/right_arrow_imageView"
+                app:layout_constraintBottom_toBottomOf="@+id/quote_status"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.99"
-                app:layout_constraintStart_toEndOf="@+id/right_arrow_imageView"
-                app:layout_constraintTop_toTopOf="@+id/right_arrow_imageView"
+                app:layout_constraintStart_toEndOf="@+id/quote_status"
+                app:layout_constraintTop_toTopOf="@+id/quote_status"
                 app:srcCompat="@drawable/accept_button"
                 tools:targetApi="lollipop" />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btn_start_service"
+                android:visibility="invisible"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/size_35dp"
+                android:layout_marginTop="@dimen/size_10dp"
+                android:layout_marginBottom="@dimen/size_10dp"
+               android:paddingStart="@dimen/size_10dp"
+                android:paddingEnd="@dimen/size_10dp"
+                android:background="@drawable/custom_button_corner_ok"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="@+id/like_imageView"
+                app:layout_constraintHorizontal_bias="1.0"
+                android:text="Start service"
+                android:textSize="@dimen/size_12sp"
+                android:textColor="@color/white"
+                android:fontFamily="@font/mulish_semi_bold"
+
+                app:layout_constraintStart_toEndOf="@+id/quote_status"
+                app:layout_constraintTop_toTopOf="parent" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
