--- a/app/src/main/res/layout/fragment_quote_details_dialog.xml
+++ b/app/src/main/res/layout/fragment_quote_details_dialog.xml
@@ -207,10 +207,11 @@
                         android:layout_height="match_parent"
                         android:layout_marginStart="@dimen/size_1dp"
                         android:background="@drawable/custom_button_edge"
+                        android:backgroundTint="@color/green"
                         android:paddingStart="@dimen/size_30dp"
                         android:paddingEnd="@dimen/size_30dp"
-                        android:text="Choose file"
-                        android:textColor="#8F8E8E"
+                        android:text="@string/choose_file"
+                        android:textColor="@color/white"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.0"
                         app:layout_constraintStart_toStartOf="parent"
