--- a/app/src/main/res/layout/quote_brief_dialog.xml
+++ b/app/src/main/res/layout/quote_brief_dialog.xml
@@ -174,7 +174,6 @@
                                 android:id="@+id/exp_btn"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_weight=".2"
                                 android:textSize="@dimen/size_15sp"
                                 android:text="Status:"
                                 android:gravity="start"
@@ -182,11 +181,11 @@
                                 android:fontFamily="@font/mulish_semi_bold" />
 
                             <TextView
+                                android:layout_marginStart="@dimen/size_5dp"
                                 android:id="@+id/spn_Bid_accepted"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="@dimen/size_5dp"
-                                android:layout_weight="2"
                                 android:fontFamily="@font/mulish_regular"
                                 android:gravity="start"
                                 android:text="@string/bid_accepted"
@@ -213,96 +212,59 @@
                                 android:layout_height="@dimen/size_35dp"
                                 android:layout_marginStart="@dimen/size_10dp"
                                 android:layout_marginTop="@dimen/size_10dp"
-                                app:srcCompat="@drawable/check_circle"
                                 app:layout_constraintStart_toStartOf="parent"
-                                app:layout_constraintTop_toTopOf="parent" />
+                                app:layout_constraintTop_toTopOf="parent"
+                                app:srcCompat="@drawable/green_check" />
 
-                            <ImageView
-                                android:id="@+id/check1inprogress"
-                                android:layout_width="@dimen/size_35dp"
-                                android:layout_height="@dimen/size_35dp"
-                                android:layout_marginStart="@dimen/size_10dp"
-                                android:layout_marginTop="@dimen/size_10dp"
-                                app:srcCompat="@drawable/bidstatus_circle"
-                                android:visibility="invisible"
-                                app:layout_constraintStart_toStartOf="parent"
-                                app:layout_constraintTop_toTopOf="parent" />
 
                             <TextView
                                 android:id="@+id/tx_bid_accpeted"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_marginTop="@dimen/size_12dp"
                                 android:fontFamily="@font/mulish_bold"
                                 android:padding="@dimen/size_2dp"
-                                android:text="@string/bid_accepted"
+                                android:text="@string/quote_sent"
                                 android:textColor="@color/dark_font"
                                 android:textSize="@dimen/size_15sp"
+                                app:layout_constraintBottom_toBottomOf="@+id/check1"
                                 app:layout_constraintStart_toEndOf="@+id/check1"
-                                app:layout_constraintTop_toTopOf="parent" />
-
-                            <TextView
-                                android:id="@+id/tx_bid_accpeted_quote"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:fontFamily="@font/mulish_regular"
-                                android:text="@string/quote_send_to_the_customer_quote_value_2500"
-                                android:textSize="@dimen/size_12dp"
-                                app:layout_constraintStart_toEndOf="@+id/check1"
-                                app:layout_constraintTop_toBottomOf="@+id/tx_bid_accpeted" />
+                                app:layout_constraintTop_toTopOf="@+id/check1" />
 
                             <View
+                                android:id="@+id/view"
                                 android:layout_width="1dp"
                                 android:layout_height="@dimen/dp_0"
                                 android:background="@color/darkblue_smf_font"
                                 app:layout_constraintBottom_toTopOf="@+id/check2"
-                                app:layout_constraintEnd_toEndOf="@id/check2"
+                                app:layout_constraintEnd_toEndOf="@+id/check1"
                                 app:layout_constraintStart_toStartOf="@+id/check1"
                                 app:layout_constraintTop_toBottomOf="@+id/check1" />
 
                             <ImageView
+                                android:layout_marginStart="@dimen/size_10dp"
                                 android:id="@+id/check2"
                                 android:layout_width="@dimen/size_35dp"
                                 android:layout_height="@dimen/size_35dp"
-                                android:layout_marginStart="@dimen/size_10dp"
                                 android:layout_marginTop="@dimen/size_30dp"
-                                app:srcCompat="@drawable/bidstatus_circle"
-                                android:visibility="visible"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintHorizontal_bias="0.0"
                                 app:layout_constraintStart_toStartOf="parent"
-                                app:layout_constraintTop_toBottomOf="@+id/check1" />
-
-                            <ImageView
-                                android:id="@+id/check2_complete"
-                                android:layout_width="@dimen/size_35dp"
-                                android:layout_height="@dimen/size_35dp"
-                                android:layout_marginStart="@dimen/size_10dp"
-                                android:layout_marginTop="@dimen/size_30dp"
-                                app:srcCompat="@drawable/bid_status_dis_circle"
-                                android:visibility="gone"
-                                app:layout_constraintStart_toStartOf="parent"
-                                app:layout_constraintTop_toBottomOf="@+id/check1" />
+                                app:layout_constraintTop_toBottomOf="@+id/check1"
+                                android:src="@drawable/inprogress" />
 
                             <TextView
                                 android:id="@+id/tx_won_reject"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_marginTop="26dp"
                                 android:fontFamily="@font/mulish_bold"
                                 android:padding="@dimen/size_2dp"
-                                android:text="@string/won_reject_lostbid"
+                                android:text="@string/bidding_in_progress"
                                 android:textColor="@color/dark_font"
                                 android:textSize="@dimen/size_14sp"
+                                app:layout_constraintBottom_toBottomOf="@+id/check2"
                                 app:layout_constraintStart_toEndOf="@id/check2"
-                                app:layout_constraintTop_toBottomOf="@+id/tx_bid_accpeted_quote" />
+                                app:layout_constraintTop_toBottomOf="@+id/view" />
 
-                            <TextView
-                                android:id="@+id/tx_won_reject_quote"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:fontFamily="@font/poppins_regular"
-                                android:textSize="@dimen/size_12sp"
-                                app:layout_constraintStart_toEndOf="@+id/check1"
-                                app:layout_constraintTop_toBottomOf="@+id/tx_won_reject" />
 
                             <View
                                 android:id="@+id/processflow2"
@@ -315,58 +277,30 @@
                                 app:layout_constraintTop_toBottomOf="@+id/check2" />
 
                             <ImageView
+                                android:layout_marginStart="@dimen/size_10dp"
                                 android:id="@+id/check3"
                                 android:layout_width="@dimen/size_35dp"
                                 android:layout_height="@dimen/size_35dp"
-                                android:layout_marginStart="@dimen/size_10dp"
                                 android:layout_marginTop="@dimen/size_30dp"
-                                app:srcCompat="@drawable/service_status_grey"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintHorizontal_bias="0.0"
                                 app:layout_constraintStart_toStartOf="parent"
-                                app:layout_constraintTop_toBottomOf="@+id/check2" />
+                                app:layout_constraintTop_toBottomOf="@+id/check2"
+                                app:srcCompat="@drawable/notstated" />
 
-                            <ImageView
-                                android:id="@+id/check3_completed"
-                                android:layout_width="@dimen/size_35dp"
-                                android:layout_height="@dimen/size_35dp"
-                                android:layout_marginStart="@dimen/size_10dp"
-                                android:layout_marginTop="@dimen/size_30dp"
-                                app:srcCompat="@drawable/service_status"
-                                android:visibility="gone"
-                                app:layout_constraintStart_toStartOf="parent"
-                                app:layout_constraintTop_toBottomOf="@+id/check2" />
-
-                            <ImageView
-                                android:id="@+id/check3_inprogress"
-                                android:layout_width="@dimen/size_35dp"
-                                android:layout_height="@dimen/size_35dp"
-                                android:layout_marginStart="@dimen/size_10dp"
-                                android:layout_marginTop="@dimen/size_30dp"
-                                app:srcCompat="@drawable/inprogress_check"
-                                android:visibility="gone"
-                                app:layout_constraintStart_toStartOf="parent"
-                                app:layout_constraintTop_toBottomOf="@+id/check2" />
 
                             <TextView
                                 android:id="@+id/tx_service_status"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_marginTop="@dimen/size_24dp"
                                 android:fontFamily="@font/mulish_bold"
                                 android:padding="@dimen/size_2dp"
-                                android:text="@string/service_status"
+                                android:text="@string/won_bid"
                                 android:textSize="@dimen/size_14sp"
-                                app:layout_constraintStart_toEndOf="@id/check2"
-                                app:layout_constraintTop_toBottomOf="@+id/tx_won_reject_quote" />
+                                app:layout_constraintBottom_toBottomOf="@+id/check3"
+                                app:layout_constraintStart_toEndOf="@+id/check3"
+                                app:layout_constraintTop_toTopOf="@+id/check3" />
 
-                            <TextView
-                                android:id="@+id/tx_service_status_quotes"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginTop="@dimen/size_2dp"
-                                android:fontFamily="@font/poppins_regular"
-                                android:textSize="@dimen/size_10sp"
-                                app:layout_constraintStart_toEndOf="@+id/check1"
-                                app:layout_constraintTop_toBottomOf="@+id/tx_service_status" />
 
                             <View
                                 android:id="@+id/processflow3"
@@ -378,60 +312,68 @@
                                 app:layout_constraintStart_toStartOf="@+id/check3"
                                 app:layout_constraintTop_toBottomOf="@+id/check3" />
 
+
                             <ImageView
+                                android:layout_marginStart="@dimen/size_10dp"
                                 android:id="@+id/check4"
                                 android:layout_width="@dimen/size_35dp"
                                 android:layout_height="@dimen/size_35dp"
                                 android:layout_marginTop="@dimen/size_30dp"
-                                android:layout_marginStart="@dimen/size_12dp"
-                                app:srcCompat="@drawable/review_dis_circle"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintHorizontal_bias="0.0"
                                 app:layout_constraintStart_toStartOf="parent"
-                                app:layout_constraintTop_toBottomOf="@+id/check3" />
+                                app:layout_constraintTop_toBottomOf="@+id/check3"
+                                app:srcCompat="@drawable/notstated" />
 
-                            <ImageView
-                                android:id="@+id/check4_completed"
-                                android:layout_width="@dimen/size_35dp"
-                                android:layout_height="@dimen/size_35dp"
-                                android:layout_marginStart="@dimen/size_10dp"
-                                android:layout_marginTop="@dimen/size_30dp"
-                                app:srcCompat="@drawable/completedprocess"
-                                android:visibility="gone"
-                                app:layout_constraintStart_toStartOf="parent"
-                                app:layout_constraintTop_toBottomOf="@+id/check3" />
-
-                            <ImageView
-                                android:id="@+id/check4_inprogress"
-                                android:layout_width="@dimen/size_35dp"
-                                android:layout_height="@dimen/size_35dp"
-                                android:layout_marginStart="@dimen/size_10dp"
-                                android:layout_marginTop="@dimen/size_30dp"
-                                app:srcCompat="@drawable/inprogress_check"
-                                android:visibility="gone"
-                                app:layout_constraintStart_toStartOf="parent"
-                                app:layout_constraintTop_toBottomOf="@+id/check3" />
 
                             <TextView
                                 android:id="@+id/tx_review_feedback"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_marginTop="@dimen/size_22dp"
                                 android:fontFamily="@font/mulish_bold"
                                 android:padding="@dimen/size_2dp"
-                                android:text="@string/review_feedback"
+                                android:text="Service in Progress"
                                 android:textSize="@dimen/size_14sp"
-                                app:layout_constraintStart_toEndOf="@id/check2"
-                                android:layout_marginBottom="@dimen/size_10dp"
-                                app:layout_constraintTop_toBottomOf="@+id/tx_service_status_quotes" />
+                                app:layout_constraintBottom_toBottomOf="@+id/check4"
+                                app:layout_constraintStart_toEndOf="@+id/check4"
+                                app:layout_constraintTop_toBottomOf="@+id/processflow3" />
+
+                            <View
+                                android:id="@+id/processflow5"
+                                android:layout_width="1dp"
+                                android:layout_height="@dimen/size_30dp"
+                                android:background="#CDCBCB"
+                                app:layout_constraintBottom_toTopOf="@id/check5"
+                                app:layout_constraintEnd_toEndOf="@+id/check5"
+                                app:layout_constraintStart_toStartOf="@+id/check5"
+                                app:layout_constraintTop_toBottomOf="@id/check4" />
+
+
+                            <ImageView
+                                android:layout_marginStart="@dimen/size_10dp"
+                                android:id="@+id/check5"
+                                android:layout_width="@dimen/size_35dp"
+                                android:layout_height="@dimen/size_35dp"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintHorizontal_bias="0.0"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toBottomOf="@+id/processflow5"
+                                app:srcCompat="@drawable/notstated" />
+
 
                             <TextView
-                                android:id="@+id/tx_review_feedback_quotes"
+                                android:id="@+id/tx_service_completed"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_marginTop="@dimen/size_2dp"
-                                android:fontFamily="@font/poppins_regular"
-                                android:textSize="10sp"
-                                app:layout_constraintStart_toEndOf="@+id/check1"
-                                app:layout_constraintTop_toBottomOf="@+id/tx_service_status" />
+                                android:fontFamily="@font/mulish_bold"
+                                android:padding="@dimen/size_2dp"
+                                android:text="Service completed"
+                                android:textSize="@dimen/size_14sp"
+                                app:layout_constraintBottom_toBottomOf="@+id/check5"
+                                app:layout_constraintStart_toEndOf="@+id/check5"
+                                app:layout_constraintTop_toTopOf="@+id/check5" />
+
 
                         </androidx.constraintlayout.widget.ConstraintLayout>
 
