FEATURE 2904 Staus_flow_for_Quote_details_UI_Design & Api Implementation
-In Dashboard Screen implemented the new active request for service in progress ActionsAndStatusFragment.kt
-And Implemented the Api for thr Service in Progress
-Implemented the Api to get the Service in Progress list of details and show in the ui
-Show the Status of the service in the Service in Progress
-Created the button in all Active list to show the Status of the event
-Created a custom Dialog to show the Ui Conformation regarding the Initiate closer

--- a/app/src/main/res/layout/detailscardview.xml
+++ b/app/src/main/res/layout/detailscardview.xml
@@ -236,27 +236,30 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:fontFamily="@font/mulish_regular"
-            android:text="@string/new_request"
+            android:text="@string/order_details"
             android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="@dimen/size_14sp"
             app:layout_constraintBottom_toBottomOf="@+id/imageView"
+            app:layout_constraintEnd_toEndOf="@+id/service_date"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/imageView"
             app:layout_constraintTop_toTopOf="@+id/imageView"
-            app:layout_constraintVertical_bias="0.50" />
+            app:layout_constraintVertical_bias="0.40" />
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="@dimen/size_30dp"
-            android:layout_height="@dimen/size_30dp"
+            android:layout_width="@dimen/size_35dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginTop="@dimen/size_25dp"
             android:src="@drawable/view"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/event_date_tx"
+            app:layout_constraintHorizontal_bias="0.03"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/event_date"
-            app:layout_constraintVertical_bias="0.50">
+            app:layout_constraintVertical_bias="0.0">
 
         </ImageView>
 
