FEATURE 2904 Staus_flow_for_Quote_details_UI_Design & Api Implementation
-In Dashboard Screen implemented the new active request for service in progress ActionsAndStatusFragment.kt
-And Implemented the Api for thr Service in Progress
-Implemented the Api to get the Service in Progress list of details and show in the ui
-Show the Status of the service in the Service in Progress
-Created the button in all Active list to show the Status of the event
-Created a custom Dialog to show the Ui Conformation regarding the Initiate closer

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -82,6 +82,9 @@
     <dimen name="size_115dp">115dp</dimen>
     <dimen name="size_82dp">82dp</dimen>
     <dimen name="size_230dp">230dp</dimen>
+    <dimen name="size_272dp">272dp</dimen>
+    <dimen name="size_240dp">240dp</dimen>
+    <dimen name="size_52dp">52dp</dimen>
 
 
 </resources>
