FEATURE - 2888(Logout and Refresh Button is not implemented)
- DashBoardFragment.kt added logics for Side nav bar.
- EmailOTPFragment.kt inside added logics to save username and emailId to SharedPreference.kt file.
- fragment_dash_board.xml file added toolbar and sidenav bar.
- nav_graph.xml file added two variables emailId and UserName.
- SignInFragment.kt added logics to save userName and emailId.
- strings.xml added strings for side nav bar.
- Added side_nav_header.xml and side_nav_manu.xml files for side nav bar.

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -69,6 +69,12 @@
         <argument
             android:name="userName"
             app:argType="string" />
+        <argument
+            android:name="firstName"
+            app:argType="string" />
+        <argument
+            android:name="emailId"
+            app:argType="string" />
         <action
             android:id="@+id/action_eMailOTPFragment_to_dashBoardFragment"
             app:destination="@id/dashBoardFragment" />
