FEATURE 2904 Inactive request Flow
_ Added the logic for Lost bid flow, service Closer flow, Bid Rejected flow
-And Implimented the Api for  Lost bid flow, service Closer flow, Bid Rejected flow
- change the ui design for cancel button

--- a/app/src/main/res/layout/fragment_action_details.xml
+++ b/app/src/main/res/layout/fragment_action_details.xml
@@ -16,6 +16,17 @@
         android:layout_height="wrap_content"
         tools:context=".ui.actiondetails.ActionDetailsFragment">
 
+        <ProgressBar
+            android:id="@+id/progress_bar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:indeterminateDrawable="@drawable/custom_progrss_bar"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <TextView
             android:id="@+id/text_actions"
             android:layout_width="wrap_content"
@@ -54,6 +65,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraintLayout3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/size_10dp"
