--- a/app/src/main/res/layout/quote_brief_dialog.xml
+++ b/app/src/main/res/layout/quote_brief_dialog.xml
@@ -20,6 +20,18 @@
             android:layout_height="wrap_content"
             tools:context=".ui.quotebriefdialog.QuoteBriefDialog">
 
+          <ProgressBar
+              android:id="@+id/progress_bar"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:visibility="gone"
+              app:layout_constraintTop_toTopOf="parent"
+              app:layout_constraintEnd_toEndOf="parent"
+              app:layout_constraintStart_toStartOf="parent"
+              app:layout_constraintBottom_toBottomOf="parent"
+              android:indeterminateDrawable="@drawable/custom_progrss_bar">
+
+          </ProgressBar>
             <RelativeLayout
                 android:id="@+id/linear_catering"
                 android:layout_width="match_parent"
