--- a/app/src/main/res/drawable/custom_button_corner_cancel.xml
+++ b/app/src/main/res/drawable/custom_button_corner_cancel.xml
@@ -2,9 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/pairing_theme_fade" />
+    <solid android:color="@color/gray" />
     <corners android:radius="@dimen/size_12dp" />
     <stroke
         android:width="@dimen/size_1dp"
-        android:color="@color/buttoncolor" />
+        android:color="@color/gray" />
 </shape>
