--- a/app/src/main/res/layout/fragment_dash_board.xml
+++ b/app/src/main/res/layout/fragment_dash_board.xml
@@ -43,22 +43,12 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
 
-                        <androidx.appcompat.widget.Toolbar
-                            android:id="@+id/tool_bar"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="@dimen/size_10dp"
-                            android:background="#00EAE7E7"
-                            android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent"
-                            app:titleTextColor="@color/white" />
+
 
                         <LinearLayout
                             android:id="@+id/myEvents_layout"
                             android:layout_width="match_parent"
-                            android:layout_height="@dimen/size_272dp"
+                            android:layout_height="265dp"
                             android:background="@drawable/panel"
                             android:orientation="vertical"
                             app:layout_constraintEnd_toEndOf="parent"
@@ -69,7 +59,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="@dimen/size_20dp"
-                                android:layout_marginTop="@dimen/size_48dp"
+                                android:layout_marginTop="@dimen/size_52dp"
                                 android:fontFamily="@font/mulish_bold"
                                 android:text="@string/event_overview"
                                 android:textColor="@color/white"
@@ -98,7 +88,7 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_marginStart="@dimen/size_12dp"
-                                    android:layout_marginTop="@dimen/size_30dp"
+                                    android:layout_marginTop="@dimen/size_20dp"
                                     android:layout_marginBottom="@dimen/size_20dp"
                                     android:layout_weight="2"
                                     android:orientation="horizontal"
@@ -125,7 +115,7 @@
                             android:id="@+id/spinner_action"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="@dimen/size_240dp"
+                            android:layout_marginTop="@dimen/size_230dp"
                             app:cardCornerRadius="@dimen/size_20dp"
                             app:cardElevation="@dimen/size_5dp"
                             app:layout_constraintEnd_toEndOf="parent"
@@ -214,6 +204,18 @@
                             app:layout_constraintLeft_toLeftOf="parent"
                             app:layout_constraintRight_toRightOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
+                        <androidx.appcompat.widget.Toolbar
+                            android:id="@+id/tool_bar"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="@dimen/size_2dp"
+                            android:layout_marginStart="@dimen/size_2dp"
+                            android:background="#00EAE7E7"
+                            android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:titleTextColor="@color/white" />
 
                         <TextView
                             android:id="@+id/calander_tx"
