FEATURE - 2845(Login restriction based on role for service vendor app)
- blank_profile_picture and side_nav_menu_selection color drawable file added.
- SignInFragment.kt added role pased login restriction.
- BaseFragment.kt inside added kayboard hide method.
- common_information_dialog.xml changed button colors.

--- a/app/src/main/res/layout/common_information_dialog.xml
+++ b/app/src/main/res/layout/common_information_dialog.xml
@@ -57,7 +57,8 @@
                 android:layout_weight="1.5"
                 android:background="@drawable/custom_button_corner_ok"
                 android:fontFamily="@font/mulish_regular"
-                android:text="@string/confirm__" />
+                android:text="@string/confirm__"
+                android:textColor="@color/white"/>
 
         </LinearLayout>
 
