--- a/app/src/main/res/layout/fragment_quote_details_dialog.xml
+++ b/app/src/main/res/layout/fragment_quote_details_dialog.xml
@@ -30,7 +30,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/mulish_bold"
-                android:text="Quote details for "
+                android:text="@string/quote_details_for"
                 android:textSize="@dimen/size_20sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -40,7 +40,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/mulish_bold"
-                android:text="Catering"
+                android:text="@string/catering"
                 android:textSize="@dimen/size_20sp"
                 app:layout_constraintBottom_toBottomOf="@+id/quote_title"
                 app:layout_constraintStart_toEndOf="@+id/quote_title"
@@ -124,7 +124,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1.2"
                         android:fontFamily="@font/poppins_medium"
-                        android:text="(post any discount)"
+                        android:text="@string/post_any_discount"
                         android:textSize="@dimen/size_14sp" />
 
                 </LinearLayout>
@@ -150,23 +150,22 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.0"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"/>
+                        app:layout_constraintTop_toTopOf="parent" />
 
                     <EditText
                         android:id="@+id/cost_estimation_amount"
                         android:layout_width="@dimen/size_140dp"
                         android:layout_height="@dimen/size_45dp"
                         android:background="@drawable/shape_dailog_curved"
+                        android:hint="@string/amount"
                         android:inputType="number"
                         android:paddingStart="@dimen/size_8dp"
                         android:textSize="@dimen/size_20sp"
-                        android:hint="@string/amount"
                         app:layout_constraintBottom_toBottomOf="@+id/currency_type"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.15"
                         app:layout_constraintStart_toEndOf="@+id/currency_type"
                         app:layout_constraintTop_toTopOf="@+id/currency_type" />
-
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -194,7 +193,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/poppins_medium"
-                        android:text="Quote details"
+                        android:text="@string/quote_details"
                         android:textSize="@dimen/size_14sp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.0"
@@ -206,10 +205,10 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_marginStart="@dimen/size_1dp"
+                        android:layout_marginTop="@dimen/size_2dp"
                         android:background="@drawable/custom_button_edge"
                         android:backgroundTint="@color/green"
                         android:paddingStart="@dimen/size_30dp"
-                        android:layout_marginTop="@dimen/size_2dp"
                         android:paddingEnd="@dimen/size_30dp"
                         android:text="@string/choose_file"
                         android:textColor="@color/white"
@@ -226,7 +225,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/size_10dp"
                     android:fontFamily="@font/poppins_medium"
-                    android:text="Comments"
+                    android:text="@string/comments"
                     android:textSize="@dimen/size_18sp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/btn_file_upload_layout" />
@@ -243,7 +242,6 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tx_comments" />
-
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -264,22 +262,23 @@
                     android:layout_marginRight="@dimen/size_5dp"
                     android:layout_weight="1.5"
                     android:background="@drawable/custom_button_corner_cancel"
-                    android:text="Cancel" />
+                    android:text="@string/cancel" />
 
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/btn_ok"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="@dimen/size_5dp"
-                    android:layout_marginTop="18dp"
+                    android:layout_marginTop="@dimen/size_18dp"
                     android:layout_weight="1.5"
                     android:background="@drawable/custom_button_corner_ok"
-                    android:text="OK" />
-
+                    android:text="@string/ok"
+                    android:textColor="@color/white" />
 
             </LinearLayout>
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-
     </androidx.cardview.widget.CardView>
+
 </layout>
