--- a/app/src/main/res/layout/sign_in_fragment.xml
+++ b/app/src/main/res/layout/sign_in_fragment.xml
@@ -94,6 +94,33 @@
 
         </LinearLayout>
 
+        <LinearLayout
+            android:id="@+id/login_message_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/phnumerlayout"
+            app:layout_constraintVertical_bias="0.020"
+            android:visibility="gone"
+            tools:ignore="UseCompoundDrawables">
+
+            <ImageView
+                android:layout_width="@dimen/size_30dp"
+                android:layout_height="@dimen/size_30dp"
+                android:src="@drawable/blank_profile_picture" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/login_message"
+                android:textColor="@color/red"
+                android:textSize="@dimen/size_18sp" />
+
+        </LinearLayout>
+
         <TextView
             android:id="@+id/textView6"
             android:layout_width="match_parent"
@@ -106,7 +133,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/phnumerlayout"
+            app:layout_constraintTop_toBottomOf="@+id/login_message_text"
             app:layout_constraintVertical_bias="0.020" />
 
         <TextView
