--- a/app/src/main/res/layout/fragment_bid_rejection_dialog.xml
+++ b/app/src/main/res/layout/fragment_bid_rejection_dialog.xml
@@ -98,7 +98,7 @@
                 android:background="@drawable/box_login_text"
                 android:gravity="start"
                 android:lines="6"
-                android:maxLength="1000"
+                android:maxLength="200"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tx_comments" />
@@ -144,7 +144,7 @@
                     android:layout_weight="1.5"
                     android:background="@drawable/custom_button_corner_cancel"
                     android:text="@string/cancel"
-                    android:textColor="@color/buttoncolor" />
+                    android:textColor="@color/black" />
 
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/btn_ok"
