FEATURE - 2938(Login page updated UI design)
- Added splash_screen_fragment.xml image.
- changed updated UI design in splash,login and emailOtp page.
- Added error role based messages to email.
- Added Theme color inside colors.xml file

--- a/app/src/main/res/layout/side_nav_header.xml
+++ b/app/src/main/res/layout/side_nav_header.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="@dimen/size_200dp"
-    android:background="@color/theme_header_blue">
+    android:background="@color/theme_color">
 
     <ImageView
         android:id="@+id/side_nav_close_btn"
