--- a/app/src/main/res/layout/fragment_email_otp.xml
+++ b/app/src/main/res/layout/fragment_email_otp.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="otpviewmodel"
             type="com.smf.events.ui.emailotp.EmailOTPViewModel" />
@@ -12,142 +13,197 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="@dimen/size_10dp"
         tools:context=".ui.emailotp.EmailOTPFragment">
 
-        <TextView
-            android:id="@+id/textView8"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/mulish_bold"
-            android:text="@string/otp_verification"
-            android:textColor="@color/black_event_title"
-            android:textSize="@dimen/size_25sp"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraintLayout4"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/size_150dp"
+            android:background="@color/theme_color"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.01" />
+            app:layout_constraintVertical_bias="0.0">
 
-        <TextView
-            android:id="@+id/textView9"
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/size_50dp"
+                android:src="@drawable/festo_login_logo"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/poppins_regular"
-            android:text="@string/please_enter_your_verification_code_sent_your_email"
-            android:textColor="@color/Muli_fade_black"
-            android:textSize="@dimen/size_18sp"
+            android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/size_130dp"
+            android:background="@drawable/theme_corner_radius_white_bacground"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView8"
-            app:layout_constraintVertical_bias="0.01" />
-
-        <TextView
-            android:id="@+id/textView10"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/mulish_bold"
-            android:gravity="center"
-            android:text="@string/enter_otp_sent_to_your_email"
-            android:textSize="@dimen/size_20sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView9"
-            app:layout_constraintVertical_bias="0.09" />
-
-        <com.chaos.view.PinView
-            android:id="@+id/otpemail"
-            style="@style/PinWidget.PinView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:cursorVisible="true"
-            android:fontFamily="@font/mulish_bold"
-            android:inputType="number"
-            android:text="@={otpviewmodel.userOtpNumber}"
-            app:hideLineWhenFilled="false"
-            app:itemCount="4"
-            app:itemHeight="@dimen/size_50dp"
-            app:itemRadius="@dimen/size_10dp"
-            app:itemSpacing="@dimen/size_20dp"
-            app:itemWidth="@dimen/size_50dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView10"
-            app:layout_constraintVertical_bias="0.04"
-            app:lineWidth="1dp" />
-
-        <LinearLayout
-            android:id="@+id/linearLayout4"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:padding="@dimen/size_10dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/otpemail"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0">
 
             <TextView
-                android:layout_width="wrap_content"
+                android:id="@+id/textView8"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/mulish_regular"
-                android:text="@string/otp_expries_in" />
+                android:layout_marginStart="@dimen/size_20dp"
+                android:layout_marginEnd="@dimen/size_20dp"
+                android:fontFamily="@font/mulish_bold"
+                android:text="@string/otp_verification"
+                android:textColor="@color/black_event_title"
+                android:textSize="@dimen/size_22sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.020" />
 
             <TextView
-                android:id="@+id/otp_timer"
+                android:id="@+id/textView9"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/size_20dp"
+                android:layout_marginEnd="@dimen/size_20dp"
+                android:fontFamily="@font/mulish_semi_bold"
+                android:text="@string/please_enter_your_verification_code_sent_your_email"
+                android:textColor="@color/gray_text"
+                android:textSize="@dimen/size_17sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView8"
+                app:layout_constraintVertical_bias="0.010" />
+
+            <TextView
+                android:id="@+id/textView10"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/size_20dp"
+                android:layout_marginEnd="@dimen/size_20dp"
+                android:fontFamily="@font/mulish_semi_bold"
+                android:textColor="@color/gray_text"
+                android:gravity="center"
+                android:text="@string/enter_otp_sent_to_your_email"
+                android:textSize="@dimen/size_20sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView9"
+                app:layout_constraintVertical_bias="0.050" />
+
+            <com.chaos.view.PinView
+                android:id="@+id/otpemail"
+                style="@style/PinWidget.PinView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/size_2dp"
-                android:fontFamily="@font/mulish_regular"
-                android:text="@string/_00_30" />
+                android:layout_gravity="center"
+                android:cursorVisible="true"
+                android:fontFamily="@font/mulish_semi_bold"
+                android:inputType="number"
+                android:text="@={otpviewmodel.userOtpNumber}"
+                app:hideLineWhenFilled="false"
+                app:itemCount="4"
+                app:itemHeight="@dimen/size_50dp"
+                app:itemRadius="@dimen/size_10dp"
+                app:itemSpacing="@dimen/size_20dp"
+                app:itemWidth="@dimen/size_50dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView10"
+                app:layout_constraintVertical_bias="0.04"
+                app:lineWidth="1dp" />
 
-        </LinearLayout>
+            <LinearLayout
+                android:id="@+id/linearLayout4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginStart="@dimen/size_20dp"
+                android:layout_marginEnd="@dimen/size_20dp"
+                android:gravity="center"
+                android:padding="@dimen/size_10dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/otpemail"
+                app:layout_constraintVertical_bias="0.02">
 
-        <TextView
-            android:id="@+id/textView11"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/mulish_medium"
-            android:text="@string/did_t_receive_otp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
-            app:layout_constraintVertical_bias="0.050000012" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/gray_text"
+                    android:fontFamily="@font/mulish_regular"
+                    android:text="@string/otp_expries_in" />
 
-        <TextView
-            android:id="@+id/otp_resend"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/mulish_medium"
-            android:text="@string/resend"
-            android:textColor="@color/buttoncolor"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView11"
-            app:layout_constraintVertical_bias="0.01" />
+                <TextView
+                    android:id="@+id/otp_timer"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/gray_text"
+                    android:layout_marginStart="@dimen/size_2dp"
+                    android:fontFamily="@font/mulish_regular"
+                    android:text="@string/_00_30" />
 
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/submitBtn"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/size_40dp"
-            android:background="@drawable/custom_button_corner_ok"
-            android:fontFamily="@font/poppins_regular"
-            android:text="@string/submit"
-            android:textColor="@color/white"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/otp_resend"
-            app:layout_constraintVertical_bias="0.65999997" />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/textView11"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/size_20dp"
+                android:layout_marginEnd="@dimen/size_20dp"
+                android:fontFamily="@font/mulish_semi_bold"
+                android:textSize="@dimen/size_16sp"
+                android:text="@string/did_t_receive_otp"
+                android:textColor="@color/gray_text"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
+                app:layout_constraintVertical_bias="0.070" />
+
+            <TextView
+                android:id="@+id/otp_resend"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/size_20dp"
+                android:layout_marginEnd="@dimen/size_20dp"
+                android:fontFamily="@font/mulish_semi_bold"
+                android:textSize="@dimen/size_17sp"
+                android:text="@string/resend"
+                android:textColor="@color/buttoncolor"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView11"
+                app:layout_constraintVertical_bias="0.020" />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/submitBtn"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/size_40dp"
+                android:layout_marginStart="@dimen/size_24dp"
+                android:layout_marginEnd="@dimen/size_24dp"
+                android:background="@drawable/custom_button_corner_ok"
+                android:fontFamily="@font/mulish_bold"
+                android:text="@string/submit"
+                android:textAllCaps="false"
+                android:textColor="@color/white"
+                android:textSize="@dimen/size_16sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/otp_resend"
+                app:layout_constraintVertical_bias="0.8" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <ProgressBar
             android:id="@+id/progress_bar"
